Suddenly crash when using the fill tool when a key frames are selected #59826

Closed
opened 2018-12-24 23:25:16 +01:00 by Khoi Nguyen · 13 comments

System Information
Operating system: Window 10
Graphics card: Nvidia GTX 1050

Blender Version
Broken:
2.80, a91886e76e blender2.8, 2018-11-28

Short description of error
Blender crash as soon as I use the fill tool, this didn't happened before when shadow.00 layer is visible as shadow.00 frames was filled with color, this only occurred today.

Exact steps for others to reproduce the error
Open the attached .blend file with Blender 2.8 Beta, if shadow.00 layer is visible and the timeline showing the closeup shot where the head turns(NOT far away shot), using the fill tool and right click on anything in any layer would crash Blender.

**System Information** Operating system: Window 10 Graphics card: Nvidia GTX 1050 **Blender Version** Broken: 2.80, a91886e76ebd blender2.8, 2018-11-28 **Short description of error** Blender crash as soon as I use the fill tool, this didn't happened before when shadow.00 layer is visible as shadow.00 frames was filled with color, this only occurred today. **Exact steps for others to reproduce the error** Open the attached .blend file with Blender 2.8 Beta, if shadow.00 layer is visible and the timeline showing the closeup shot where the head turns(NOT far away shot), using the fill tool and right click on anything in any layer would crash Blender.
Author

Added subscriber: @AfterMat

Added subscriber: @AfterMat

Added subscriber: @mont29

Added subscriber: @mont29

Missing the .blend file ;)

Missing the .blend file ;)
Author

In #59826#589421, @mont29 wrote:
Missing the .blend file ;)

Yo, I uploaded twice now. I even made sure the second time that the file appear in the email with the "download" appeared and all, but now it's gone, has it always missing or has someone made it disappear ? It's fairly big plus my internet is slow so it's gonna take a while to do it the third time. Let's try this download link, https://drive.google.com/file/d/1NnalFdD9ZXAbdgRghlQ_EXU9JyaOYEhu/view?usp=sharing

> In #59826#589421, @mont29 wrote: > Missing the .blend file ;) Yo, I uploaded twice now. I even made sure the second time that the file appear in the email with the "download" appeared and all, but now it's gone, has it always missing or has someone made it disappear ? It's fairly big plus my internet is slow so it's gonna take a while to do it the third time. Let's try this download link, https://drive.google.com/file/d/1NnalFdD9ZXAbdgRghlQ_EXU9JyaOYEhu/view?usp=sharing
Khoi Nguyen changed title from Suddenly crash when using the fill tool when a certain layer is visible to Suddenly crash when using the fill tool when a certain layer and keyframe is visible 2018-12-28 23:09:33 +01:00
Khoi Nguyen changed title from Suddenly crash when using the fill tool when a certain layer and keyframe is visible to Suddenly crash when using the fill tool when a key frames are selected 2018-12-28 23:10:41 +01:00

Added subscriber: @capnm

Added subscriber: @capnm

A simpler file #59826-gp-material-slots.blend

This and similar issues are caused by trying to access an empty element inside the material array:
image.png

Thread 1 "blender8" received signal SIGSEGV, Segmentation fault.
0x0000555557f3ea1c in gp_draw_strokes (tgpw=0x7fffffffd480) at source/blender/editors/gpencil/drawgpencil.c:1001
1001                    MaterialGPencilStyle *gp_style = ma->gp_style;
996                     if (gp_can_draw_stroke(gps, tgpw->dflag) == false) {
997                             continue;
998                     }
999                     /* check if the color is visible */
1000                    Material *ma = tgpw->gpd->mat[gps->mat_nr];
1001                    MaterialGPencilStyle *gp_style = ma->gp_style;
1002
1003                    if ((gp_style == NULL) ||
1004                        (gp_style->flag & GP_STYLE_COLOR_HIDE) ||
1005                        /* if onion and ghost flag do not draw*/
ma = 0x0
Traceback (most recent call last):
  File "2.80/scripts/startup/bl_ui/space_view3d.py", line 3883, in draw
    layout.operator("gpencil.stroke_change_color", text=mat.name).material = mat.name
AttributeError: 'NoneType' object has no attribute 'name'

location: <unknown location>:-1
A simpler file [#59826-gp-material-slots.blend](https://archive.blender.org/developer/F6105777/T59826-gp-material-slots.blend) This and similar issues are caused by trying to access an empty element inside the material array: ![image.png](https://archive.blender.org/developer/F6104914/image.png) ``` Thread 1 "blender8" received signal SIGSEGV, Segmentation fault. 0x0000555557f3ea1c in gp_draw_strokes (tgpw=0x7fffffffd480) at source/blender/editors/gpencil/drawgpencil.c:1001 1001 MaterialGPencilStyle *gp_style = ma->gp_style; 996 if (gp_can_draw_stroke(gps, tgpw->dflag) == false) { 997 continue; 998 } 999 /* check if the color is visible */ 1000 Material *ma = tgpw->gpd->mat[gps->mat_nr]; 1001 MaterialGPencilStyle *gp_style = ma->gp_style; 1002 1003 if ((gp_style == NULL) || 1004 (gp_style->flag & GP_STYLE_COLOR_HIDE) || 1005 /* if onion and ghost flag do not draw*/ ma = 0x0 ``` ``` Traceback (most recent call last): File "2.80/scripts/startup/bl_ui/space_view3d.py", line 3883, in draw layout.operator("gpencil.stroke_change_color", text=mat.name).material = mat.name AttributeError: 'NoneType' object has no attribute 'name' location: <unknown location>:-1 ```

Appreciate the help. So that's because of the blank material thingy ? How do I get rid of it ?

@AfterMat Yes, hit the minus - [x] button on the right vertical panel :-)
A workaround is to remove all empty grease pencil material slots.

> Appreciate the help. So that's because of the blank material thingy ? How do I get rid of it ? @AfterMat Yes, hit the minus - [x] button on the right vertical panel :-) A workaround is to remove all empty grease pencil material slots.
Author

@AfterMat Yes, hit the minus - [x] button on the right vertical panel :-)
A workaround is to remove all empty grease pencil material slots.

Ohh, that's what the plus and minus sign for, I feel so silly. Thanks for the time :D

> @AfterMat Yes, hit the minus - [x] button on the right vertical panel :-) > A workaround is to remove all empty grease pencil material slots. Ohh, that's what the plus and minus sign for, I feel so silly. Thanks for the time :D
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Is this still an issue in the latest build?

Is this still an issue in the latest build?

In #59826#600194, @lichtwerk wrote:
Is this still an issue in the latest build?

It is still broken, reproducible by trying to fill the face in my test file.

I could only gitgrep 2 places in code, where it uses emply GP material slots:

  • source/blender/editors/gpencil/drawgpencil.c:1001

I don't know why blender uses empty material slots in the first place and how to fix that properly.

  • release/scripts/startup/bl_ui/space_view3d.py: 3895
    called in edit mode->RMB->assign material

That can be simply fixed with:
0001-GP-Skip-empty-material-slots.patch

> In #59826#600194, @lichtwerk wrote: > Is this still an issue in the latest build? It is still broken, reproducible by trying to fill the face in my test file. I could only gitgrep 2 places in code, where it uses emply GP material slots: * `source/blender/editors/gpencil/drawgpencil.c:1001` I don't know why blender uses empty material slots in the first place and how to fix that properly. * `release/scripts/startup/bl_ui/space_view3d.py: 3895` called in edit mode->RMB->assign material That can be simply fixed with: [0001-GP-Skip-empty-material-slots.patch](https://archive.blender.org/developer/F6297086/0001-GP-Skip-empty-material-slots.patch)

This issue was referenced by b1fa2a8fbb

This issue was referenced by b1fa2a8fbbd9d17da7e1fea8afd29055f47113c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59826
No description provided.