Fix T59826: grease pencil crash with empty material slot.